[package]
name = "tp2bar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
[profile.release]
strip = true  # Automatically strip symbols from the binary.